--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <![endif]-->
 </head>
 <body>
-<h1 id="orange.ai">Orange.AI</h1>
+<h1 id="qiufu.8088.eu.org">南郡叶秋甫</h1>
 <p><img src="icon.png" alt="avatar" width="100" height="100"></p>
 <h2 id="about-me">About Me</h2>
 <p>Passionately Curious 听凭好奇心的指引</p>
@@ -182,6 +182,6 @@ href="https://orangeai.notion.site/by-orange-ai-8db8382267f747f08ed799a8d99c73b6
 <p>Newsletter <a
 href="https://quail.ink/orange">quail.ink/orange</a></p>
 <h2 id="contact-me">Contact Me</h2>
-<p>Email <a href="mailto:otiron@gmail.com">otiron@gmail.com</a></p>
+<p>Email <a href="mailto:9776787@gmail.com">9776787@gmail.com</a></p>
 </body>
 </html>
